--- a/workspace.html
+++ b/workspace.html
@@ -18,7 +18,7 @@
         <div class="container">
           <a class="navbar-brand" href="#">
             <img
-        src="/images/small_logo.png"
+        src="images/small_logo.png"
         width="50"
         alt="Otto Logo"
       />
