updates to dashboard tabs

--- a/workspace.html
+++ b/workspace.html
@@ -43,7 +43,7 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Profile
+                  Account
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="#">Account Settings</a></li>
@@ -62,6 +62,7 @@
     <!-- MAIN SECTION -->
     <main class="container mt-4 py-5">
     
+      <!-- DASHBOARD TABS -->
         <div class="row text-center">
           <h1>Dealer Dashboard</h1>
         </div>
@@ -70,16 +71,16 @@
           <div class="col">
             <ul class="nav nav-tabs nav-fill">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Active</a>
+                <a class="nav-link active" aria-current="page" href="#">Customer Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">My Offers</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">My Inventory</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Profile</a>
               </li>
             </ul>
           </div>
