--- a/workspace.html
+++ b/workspace.html
@@ -1,6 +1,6 @@
 <html lang="en">
   <head>
-    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/public/css/style.css" rel="stylesheet" />
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -20,7 +20,7 @@
       <nav class="navbar fixed-top navbar-expand-lg bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="/images/small_logo.png" width="50" alt="Otto Logo" />
+            <img src="/public/images/small_logo.png" width="50" alt="Otto Logo" />
           </a>
           <button
             class="navbar-toggler"
@@ -114,6 +114,7 @@
                       {{#cars}}
                       <tr>
                         <form method="POST" action="/dealer/delete-car">
+                        <input type="hidden" value="{{ id }}" name="listingID"/>
                         <th class="align-middle" scope="row">{{id}}</th>
                         <td class="align-middle">{{make}}</td>
                         <td class="align-middle">{{model}}</td>
@@ -227,7 +228,46 @@
 
         <!-- REQUEST TAB -->
 
-        <div class="tab-pane fade" id="requests-tab-pane" role="tabpanel" aria-labelledby="requests-tab-pane">REQUEST TABLE</div>
+        <div class="tab-pane fade" id="requests-tab-pane" role="tabpanel" aria-labelledby="requests-tab-pane">
+          
+          <div class="container">
+
+            <!-- REQUEST TABLE -->
+            <table class="table table-striped table-hover mt-4">
+              <thead>
+                <tr>
+                  <th scope="col">Customer ID</th>
+                  <th scope="col">Make</th>
+                  <th scope="col">Model</th>
+                  <th scope="col">Year</th>
+                  <th scope="col">Color</th>
+                  <th scope="col">Max Mileage</th>
+                  <th scope="col">Requested On</th>
+                </tr>
+              </thead>
+              <tbody>
+                {{#requests}}
+                <tr>
+                  <form method="POST" action="/dealer/send-offer">
+                  <input type="hidden" value="{{ id }}" name="listingID"/>
+                  <th class="align-middle" scope="row">{{customerID}}</th>
+                  <td class="align-middle">{{make}}</td>
+                  <td class="align-middle">{{model}}</td>
+                  <td class="align-middle">{{year}}</td>
+                  <td class="align-middle">{{color}}</td>
+                  <td class="align-middle">{{maxMileage}}</td>
+                  <td class="align-middle">{{createdAt}}</td>
+                  <td class="align-middle">
+                    <button class="btn-sm rounded-3">Send an Offer</button>
+                  </td>
+                  </form>
+                </tr>
+                {{/requests}}
+              </tbody>
+            </table>
+          </div>
+
+        </div>
 
         <!-- OFFER TAB -->
 
